--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Pokedex</title>
   </head>
-  <body style="background-repeat: repeat;background-image: url(./images/bg_black.png);height: 100%">
+  <body style="background-repeat: repeat;background-image: url(/pokedex2/images/bg_black.png);height: 100%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
